--- a/schedule/templates/schedule/section_registration.html
+++ b/schedule/templates/schedule/section_registration.html
@@ -28,6 +28,10 @@
                             <i class="bi bi-x-circle"></i> Deregister All Section Assignments
                         </button>
                         
+                        <a href="{% url 'assign_language_courses' %}" class="btn btn-success mb-3">
+                            <i class="bi bi-translate"></i> Assign Language Courses
+                        </a>
+                        
                         <form id="course-registration-form">
                             <div class="mb-3">
                                 <label for="course-select" class="form-label">Or select a specific course:</label>
