Implement 6th grade trimester course assignment system

--- a/schedule/templates/schedule/partials/registration_actions.html
+++ b/schedule/templates/schedule/partials/registration_actions.html
@@ -31,6 +31,17 @@
                     </button>
                 </div>
             </form>
+
+            <hr class="my-3">
+            <h6 class="mb-3">Specialized Registration</h6>
+            
+            <a href="{% url 'assign_language_courses' %}" class="btn btn-outline-success mb-2">
+                <i class="bi bi-translate"></i> Language Course Assignment
+            </a>
+            
+            <a href="{% url 'assign_trimester_courses' %}" class="btn btn-outline-success">
+                <i class="bi bi-calendar3"></i> 6th Grade Trimester Courses
+            </a>
         </div>
     </div>
 </div> 
