Add manage sections page similar to manage courses page

--- a/schedule/templates/schedule/index.html
+++ b/schedule/templates/schedule/index.html
@@ -83,13 +83,19 @@
                         <span class="badge bg-primary rounded-pill">{{ num_sections }}</span>
                     </li>
                 </ul>
-                {% if num_students > 0 %}
                 <div class="d-grid gap-2 mt-3">
+                    {% if num_students > 0 %}
                     <a href="{% url 'view_students' %}" class="btn btn-outline-primary">
                         <i class="bi bi-people-fill"></i> View All Students
                     </a>
+                    {% endif %}
+                    <a href="{% url 'view_sections' %}" class="btn btn-outline-primary">
+                        <i class="bi bi-grid-3x3"></i> Manage Sections
+                    </a>
+                    <a href="{% url 'view_courses' %}" class="btn btn-outline-primary">
+                        <i class="bi bi-book"></i> Manage Courses
+                    </a>
                 </div>
-                {% endif %}
             </div>
         </div>
     </div>
