--- a/schedule/templates/schedule/base.html
+++ b/schedule/templates/schedule/base.html
@@ -91,6 +91,7 @@
                                 <li><a class="dropdown-item" href="{% url 'view_rooms' %}">Rooms</a></li>
                                 <li><a class="dropdown-item" href="{% url 'view_courses' %}">Courses</a></li>
                                 <li><a class="dropdown-item" href="{% url 'view_periods' %}">Periods</a></li>
+                                <li><a class="dropdown-item" href="{% url 'view_sections' %}">Sections</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="{% url 'admin_reports' %}">Reports</a></li>
                             </ul>
